syntax = "proto3";
package UserPackage;

message UserList {
    string firstName = 1;
    string lastName = 2;
    string email = 3;
    string phone = 4;
}
message UserId { 
    int32 id = 1;
}
message User {
    string firstName = 1;
    string lastName = 2;
    string email = 3;
    string phone = 4;
}